phase 5 updates